more training experiments

--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,10 @@
     "\n",
     "path = \"./content/data\"\n",
     "docs = os.listdir(path)\n",
-    "df_cols = ['name', 'model', 'year', 'price', 'color', 'fuelType', 'carOrigin', 'carInsurance', 'gearType', 'mirrorType', 'motorPower', 'drivenKm', 'passengers', 'paymentMethod', 'saleType', 'secondHandStatus']"
+    "df_cols = ['name', 'model', 'year', 'price', 'color', 'fuelType', 'carOrigin', 'carInsurance', 'gearType', 'mirrorType', 'motorPower', 'drivenKm', 'passengers', 'paymentMethod', 'saleType', 'secondHandStatus']\n",
+    "\n",
+    "KM_LIMIT = 500000\n",
+    "PRICE_LIMIT = 650000"
    ]
   },
   {
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +71,7 @@
     "      return None\n",
     "    elif num < 100:\n",
     "      return num * 1000\n",
-    "    elif num > 1000000:\n",
+    "    elif num > KM_LIMIT:\n",
     "      return None\n",
     "    else:\n",
     "      return num\n",
@@ -117,6 +120,11 @@
     "    return None\n",
     "  return data\n",
     "\n",
+    "def price_handler(data):\n",
+    "  if int(data) > PRICE_LIMIT:\n",
+    "    return None\n",
+    "  return data\n",
+    "\n",
     "def get_data(cont):\n",
     "  try:\n",
     "      drivingTableRow = cont.find(\"table\",{\"class\":\"driving-table\"}).tr\n",
@@ -127,6 +135,7 @@
     "      model = title.split(\" \")[len(title.split(\" \"))-1]\n",
     "      year = drivingTableRow.td.h5.text.split(\" \")[2]\n",
     "      price = drivingTableRow.findAll(\"td\")[1+diff].h5.text.split(\"\\n\")[0].split(\" \")[0]\n",
+    "      # price = price_handler(price)\n",
     "      color = listAddsTableRows[1].findAll(\"td\")[1+diff].text.replace(\" \",\"\")\n",
     "      fuelType = listAddsTableRows[2].findAll(\"td\")[1+diff].text.replace(\" \",\"\")\n",
     "      carOrigin = listAddsTableRows[3].findAll(\"td\")[1+diff].text.replace(\" \",\"\")\n",
@@ -157,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +189,7 @@
     "    file.close()\n",
     "\n",
     "df\n",
-    "df.to_csv('./content/cars_v1.csv', index=False)"
+    "df.to_csv('./content/results/cars_v1.csv', index=False)"
    ]
   },
   {
@@ -190,7 +199,7 @@
    "outputs": [],
    "source": [
     "# conduct an explorative data analysis for the data\n",
-    "# conduct data cleaning and transformation if needed\n"
+    "# conduct data cleaning and transformation if needed"
    ]
   },
   {
@@ -199,19 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# - conduct feature engineering\n",
-    "# - select the best model for the problem between Polynomial Regression, kNN, and Decision Tree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# - create a microservice that predicts the car price given certain input data\n",
-    "\n",
-    "# - the code should be shared in a private GitHub repo"
+    "# - conduct feature engineering"
    ]
   }
  ],
