removed extra lines

--- a/training.ipynb
+++ b/training.ipynb
@@ -2,9 +2,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>model</th>\n",
+       "      <th>year</th>\n",
+       "      <th>price</th>\n",
+       "      <th>color</th>\n",
+       "      <th>fuelType</th>\n",
+       "      <th>carOrigin</th>\n",
+       "      <th>carInsurance</th>\n",
+       "      <th>gearType</th>\n",
+       "      <th>mirrorType</th>\n",
+       "      <th>motorPower</th>\n",
+       "      <th>drivenKm</th>\n",
+       "      <th>passengers</th>\n",
+       "      <th>paymentMethod</th>\n",
+       "      <th>saleType</th>\n",
+       "      <th>secondHandStatus</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>كيا</td>\n",
+       "      <td>اوبتيما</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>أبيضعاجي</td>\n",
+       "      <td>بنزين</td>\n",
+       "      <td>خصوصي</td>\n",
+       "      <td>فلسطينية</td>\n",
+       "      <td>اوتوماتيك</td>\n",
+       "      <td>الكتروني</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>75000.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>نقدا فقط</td>\n",
+       "      <td>للبيع فقط</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  name    model  year   price     color fuelType carOrigin carInsurance  \\\n",
+       "0  كيا  اوبتيما  2014  100000  أبيضعاجي    بنزين     خصوصي     فلسطينية   \n",
+       "\n",
+       "    gearType mirrorType  motorPower  drivenKm  passengers paymentMethod  \\\n",
+       "0  اوتوماتيك   الكتروني        2000   75000.0           5     نقدا فقط    \n",
+       "\n",
+       "     saleType  secondHandStatus  \n",
+       "0  للبيع فقط                1.0  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.metrics import mean_squared_error\n",
@@ -17,14 +96,111 @@
     "df_cols = ['name', 'model', 'year', 'color', 'fuelType', 'carOrigin', 'carInsurance', 'gearType', 'mirrorType', 'motorPower', 'drivenKm', 'passengers', 'paymentMethod', 'saleType', 'secondHandStatus','price']\n",
     "numeric_cols = ['year', 'motorPower', 'drivenKm', 'passengers', 'secondHandStatus','price']\n",
     "cats_min = ['fuelType', 'carOrigin', 'carInsurance', 'gearType', 'mirrorType', 'paymentMethod', 'saleType']\n",
-    "cats_top = ['name', 'model', 'color']"
+    "cats_top = ['name', 'model', 'color']\n",
+    "\n",
+    "df[:1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>motorPower</th>\n",
+       "      <th>drivenKm</th>\n",
+       "      <th>passengers</th>\n",
+       "      <th>secondHandStatus</th>\n",
+       "      <th>price</th>\n",
+       "      <th>fuelType_بنزين</th>\n",
+       "      <th>fuelType_ديزل</th>\n",
+       "      <th>fuelType_كهرباء</th>\n",
+       "      <th>fuelType_هايبرد</th>\n",
+       "      <th>...</th>\n",
+       "      <th>saleType_للبيع أو التبديل</th>\n",
+       "      <th>saleType_للبيع فقط</th>\n",
+       "      <th>saleType_للتبديل فقط</th>\n",
+       "      <th>saleType_نقدا فقط</th>\n",
+       "      <th>name_1</th>\n",
+       "      <th>name_2</th>\n",
+       "      <th>name_3</th>\n",
+       "      <th>name_4</th>\n",
+       "      <th>name_5</th>\n",
+       "      <th>name_6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>75000.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  motorPower  drivenKm  passengers  secondHandStatus   price  \\\n",
+       "0  2014        2000   75000.0           5               1.0  100000   \n",
+       "\n",
+       "   fuelType_بنزين  fuelType_ديزل  fuelType_كهرباء  fuelType_هايبرد  ...  \\\n",
+       "0               1              0                0                0  ...   \n",
+       "\n",
+       "   saleType_للبيع أو التبديل   saleType_للبيع فقط   saleType_للتبديل فقط   \\\n",
+       "0                           0                    1                      0   \n",
+       "\n",
+       "   saleType_نقدا فقط   name_1  name_2  name_3  name_4  name_5  name_6  \n",
+       "0                   0     0.0    -2.0     0.0     1.0     0.0     0.0  \n",
+       "\n",
+       "[1 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Feature Engineering & Selection ##\n",
     "scaler = MinMaxScaler()\n",
@@ -40,16 +216,17 @@
     "# num_df = pd.DataFrame(scaler.fit_transform(num_df), columns=num_df.columns) # scaling numeric columns\n",
     "hashed_df = fh.fit_transform(df[cats_top].astype(str).values)\n",
     "hashed_df = pd.DataFrame(hashed_df.toarray(), columns=['name_1', 'name_2', 'name_3', 'name_4', 'name_5', 'name_6'])\n",
-    "ndf = pd.concat([num_df, dumms_df,hashed_df], axis=1)"
+    "ndf = pd.concat([num_df, dumms_df, hashed_df], axis=1)\n",
+    "ndf[:1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1- Dataframe with dropping all rows with NaN values\n",
+    "## 1- Dataframe with dropping all rows with NaN values\n",
     "naDF = ndf.dropna()\n",
     "\n",
     "# removing outliers - naDF\n",
@@ -59,7 +236,7 @@
     "\n",
     "naDF = naDF[~((naDF < (Q1 - 1.5 * IQR)) | (naDF > (Q3 + 1.5 * IQR))).any(axis=1)]\n",
     "\n",
-    "# 2- Dataframe with filling all NaN values with fillna (mode) method\n",
+    "## 2- Dataframe with filling all NaN values with fillna (mode) method\n",
     "fnDF = ndf.copy()\n",
     "for column in fnDF.columns:\n",
     "  fnDF[column].fillna(fnDF[column].mode()[0], inplace=True)\n",
@@ -74,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -82,8 +259,8 @@
      "output_type": "stream",
      "text": [
       "Linear Regression: 0.7137615790241527\n",
-      "Decision Tree: 0.6069517890190514\n",
-      "KNN: 0.18917770776432175\n"
+      "Decision Tree: 0.5805884160514144\n",
+      "KNN: 0.2917334656750036\n"
      ]
     }
    ],
@@ -94,32 +271,31 @@
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "\n",
     "trainDF = naDF.copy()\n",
-    "y = trainDF['price']\n",
-    "trainDF = trainDF.drop(columns=['price'])\n",
-    "X = trainDF\n",
+    "Y = trainDF['price']\n",
+    "X = trainDF.drop(columns=['price'])\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=33143121)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.25, random_state=33143121)\n",
     "\n",
-    "## Linear Regression\n",
+    "##? Linear Regression\n",
     "# lr = LinearRegression()\n",
     "lr = Ridge(alpha=1.0)\n",
     "lr.fit(X_train, y_train)\n",
     "y_pred = lr.predict(X_test)\n",
     "print(f\"Linear Regression: {lr.score(X_test, y_test)}\")\n",
     "\n",
-    "## Decision Tree Regressor\n",
-    "dt = DecisionTreeRegressor(random_state=0, max_depth=5)\n",
+    "##? Decision Tree Regressor\n",
+    "dt = DecisionTreeRegressor(random_state=0, max_depth=6)\n",
     "dt.fit(X_train, y_train)\n",
     "y_pred = dt.predict(X_test)\n",
     "print(f\"Decision Tree: {dt.score(X_test, y_test)}\")\n",
     "\n",
-    "## KNN model\n",
-    "knn = KNeighborsRegressor(n_neighbors=10)\n",
+    "##? KNN model\n",
+    "knn = KNeighborsRegressor(n_neighbors=5)\n",
     "knn.fit(X_train, y_train)\n",
     "y_pred = knn.predict(X_test)\n",
     "print(f\"KNN: {knn.score(X_test, y_test)}\")\n",
     "\n",
-    "# ## Random Forest Classifier - Only works for classification problems\n",
+    "#! ## Random Forest Classifier - Only works for classification problems\n",
     "# rf = RandomForestClassifier(n_estimators=100)\n",
     "# rf.fit(X_train, y_train)\n",
     "# y_pred = rf.predict(X_test)\n",
@@ -128,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
